Fixed bug #24951 (ob_flush() needlessly destroys output handler).